--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#F1F1F1"
+
         android:orientation="vertical">
 
         <!-- view가 아래로 겹치는 관계가 되버림 -->
@@ -110,7 +111,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_weight="10000"
-                    android:text="- 99개의 메모 -"
+                    android:text="- 0개의 메모 -"
                     android:textAlignment="center"
                     android:textColor="#262626"
                     android:textSize="20sp" />
@@ -137,6 +138,14 @@
             app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
 
         </androidx.recyclerview.widget.RecyclerView>
+
+        <ImageView
+            android:id="@+id/v_main_empty"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/main___empty"
+            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
+            ></ImageView>
 
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
