--- a/app/src/main/res/layout/main_card_item.xml
+++ b/app/src/main/res/layout/main_card_item.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/view_main_card"
-    android:layout_width="200dp"
-    android:layout_height="200dp"
-    android:layout_margin="5dp">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
     <ImageView
         android:layout_width="wrap_content"
@@ -11,19 +10,17 @@
         android:src="@drawable/home_memo_ex"></ImageView>
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="188dp"
+        android:layout_height="180dp"
         android:layout_marginLeft="12dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="20dp"
         android:layout_marginRight="12dp"
         android:layout_marginBottom="15dp"
         android:orientation="vertical">
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="10dp"
             android:orientation="vertical">
 
             <TextView
@@ -37,8 +34,8 @@
             <TextView
                 android:id="@+id/tv_main_card_title_left"
                 android:layout_width="match_parent"
-                android:layout_height="30dp"
-                android:text="가馬娘あㅁAs@.'!*8가馬娘あㅁAs@.'!*8"
+                android:layout_height="28dp"
+                android:text="가馬娘あㅁAs@.'!*8가"
                 android:textColor="#000000"
                 android:textSize="20sp" />
         </LinearLayout>
@@ -50,10 +47,8 @@
             <jp.wasabeef.richeditor.RichEditor
                 android:id="@+id/tv_main_card_content"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp" />
         </LinearLayout>
-
     </LinearLayout>
-
 </FrameLayout>
