--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,7 @@
 
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
+        android:id="@+id/coodinator_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#F1F1F1"
@@ -93,6 +94,7 @@
             </com.google.android.material.appbar.MaterialToolbar>
 
             <LinearLayout
+                android:id="@+id/lay_main_activity_bar"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:background="#F1F1F1"
@@ -125,6 +127,46 @@
                     android:layout_gravity="center"
                     android:layout_weight="1"
                     android:src="@drawable/ic_search_solid" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/lay_main_activity_searchbar"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:background="#F1F1F1"
+                android:paddingLeft="20dp"
+                android:paddingRight="20dp"
+                android:visibility="gone">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:src="@drawable/ic_bars_solid"
+                    android:visibility="invisible" />
+
+                <EditText
+                    android:id="@+id/edt_main_activity_search"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="10000"
+                    android:hint="터치 후 제목,날짜,내용을 검색하세요"
+                    android:textAlignment="center"
+                    android:textColor="#262626"
+                    android:textColorHint="#BCBCBC"
+                    android:layout_gravity="center"
+                    android:backgroundTint="#F1F1F1"
+                    android:textSize="20sp" />
+
+                <ImageView
+                    android:id="@+id/btn_main_memo_search"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:src="@drawable/ic_search_solid"
+                    android:visibility="invisible" />
 
             </LinearLayout>
 
