--- a/app/src/main/res/xml/settings.xml
+++ b/app/src/main/res/xml/settings.xml
@@ -46,5 +46,13 @@
 
     </PreferenceCategory>
 
+    <PreferenceCategory android:title="기타">
 
+        <Preference
+            android:defaultValue="false"
+            android:key="pin mode"
+            android:summary="잠금 활성화 된 메모에 사용하는 PIN 번호를 변경할 수 있습니다."
+            android:title="PIN 변경" />
+
+    </PreferenceCategory>
 </PreferenceScreen>
