--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -165,22 +165,46 @@
                     android:text="제목,내용,시간,날짜등을 검색하세요."
                     android:textAlignment="center"
                     android:textColor="#BCBCBC" />
-
-                <!--                <EditText-->
-                <!--                    android:id="@+id/edt_main_activity_search"-->
-                <!--                    android:layout_width="match_parent"-->
-                <!--                    android:layout_height="wrap_content"-->
-                <!--                    android:layout_weight="10000"-->
-                <!--                    android:hint="터치 후 제목,날짜,내용을 검색하세요"-->
-                <!--                    android:textAlignment="center"-->
-                <!--                    android:textColor="#262626"-->
-                <!--                    android:textColorHint="#BCBCBC"-->
-                <!--                    android:layout_gravity="center"-->
-                <!--                    android:backgroundTint="#F1F1F1"-->
-                <!--                    android:textSize="20sp" />-->
-
-
             </FrameLayout>
+
+            <LinearLayout
+                android:id="@+id/lay_main_activity_sel_bar"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:background="#F1F1F1"
+                android:paddingLeft="20dp"
+                android:paddingRight="20dp"
+                android:visibility="gone"
+                >
+
+                <ImageView
+                    android:id="@+id/btn_main_sel_func"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:src="@drawable/ic_bars_solid" />
+
+                <TextView
+                    android:id="@+id/tv_main_card_sel_count"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_weight="10000"
+                    android:text="- 0개의 메모 선택됨 -"
+                    android:textAlignment="center"
+                    android:textColor="#262626"
+                    android:textSize="20sp" />
+
+                <ImageView
+                    android:id="@+id/btn_main_sel_trash"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:src="@drawable/ic_search_solid" />
+
+            </LinearLayout>
 
         </com.google.android.material.appbar.AppBarLayout>
 
