--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -115,7 +115,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_weight="10000"
-                    android:text="- 0개의 메모 -"
+                    android:text="0개의 메모"
                     android:textAlignment="center"
                     android:textColor="#262626"
                     android:textSize="20sp" />
@@ -183,7 +183,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_weight="1"
-                    android:src="@drawable/ic_bars_solid" />
+                    android:src="@drawable/ic_select_folder" />
 
                 <TextView
                     android:id="@+id/tv_main_card_sel_count"
@@ -191,7 +191,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_weight="10000"
-                    android:text="- 0개의 메모 선택됨 -"
+                    android:text="선택됨"
                     android:textAlignment="center"
                     android:textColor="#262626"
                     android:textSize="20sp" />
@@ -202,7 +202,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_weight="1"
-                    android:src="@drawable/ic_search_solid" />
+                    android:src="@drawable/ic_select_trash" />
 
             </LinearLayout>
 
