--- a/app/src/main/res/layout/main_drawer_custom.xml
+++ b/app/src/main/res/layout/main_drawer_custom.xml
@@ -15,6 +15,7 @@
         android:id="@+id/linearLayout10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@drawable/linear_corner"
         android:orientation="vertical">
 
         <LinearLayout
@@ -72,7 +73,115 @@
 
             </LinearLayout>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:id="@+id/lin_main_drawer_main_folder"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:id="@+id/iv_main_drawer_main_folder"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/ic_outline_home_24" />
+
+                    <TextView
+                        android:id="@+id/iv_main_drawer_main_title"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="6"
+                        android:layout_gravity="center_vertical"
+                        android:text="메인"
+                        android:textColor="#DE000000" />
+
+                    <TextView
+                        android:id="@+id/iv_main_drawer_main_count"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="0.5"
+                        android:layout_gravity="center|center_horizontal"
+                        android:text="0"
+                        android:gravity="right"
+                        android:textColor="#DE000000" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/lin_main_drawer_impo_folder"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <ImageView
+                        android:id="@+id/iv_main_drawer_impo_folder"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="0"
+                        app:srcCompat="@drawable/ic_outline_home_24" />
+
+                    <TextView
+                        android:id="@+id/iv_main_drawer_impo_title"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_weight="0"
+                        android:text="중요"
+                        android:textColor="#DE000000"
+                        tools:layout_weight="1" />
+
+                    <TextView
+                        android:id="@+id/iv_main_drawer_impo_count"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center|center_horizontal"
+                        android:layout_weight="0"
+                        android:text="0"
+                        android:textColor="#DE000000" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/lin_main_drawer_trash_folder"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <ImageView
+                        android:id="@+id/iv_main_drawer_trash_folder"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="0"
+                        app:srcCompat="@drawable/ic_outline_home_24" />
+
+                    <TextView
+                        android:id="@+id/iv_main_drawer_trash_title"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_weight="0"
+                        android:text="휴지통"
+                        android:textColor="#DE000000"
+                        tools:layout_weight="1" />
+
+                    <TextView
+                        android:id="@+id/iv_main_drawer_trash_count"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center|center_horizontal"
+                        android:layout_weight="0"
+                        android:text="0"
+                        android:textColor="#DE000000" />
+
+                </LinearLayout>
+
+
+            </LinearLayout>
+
             <ListView
+                android:id="@+id/lv_main_activity_drawer_list_item"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
@@ -98,8 +207,6 @@
         <!--            android:orientation="horizontal" />-->
 
     </LinearLayout>
-
-
 
 
 </LinearLayout>
