--- a/app/src/main/res/layout/main_drawer_select_set_item.xml
+++ b/app/src/main/res/layout/main_drawer_select_set_item.xml
@@ -5,29 +5,37 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <ImageView
-        android:id="@+id/iv_main_drawer_select_folder"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="0"
-        app:srcCompat="@drawable/ic_outline_home_24" />
-
-    <TextView
-        android:id="@+id/iv_main_drawer_select_title"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:layout_weight="0"
-        android:text="TextView"
-        android:textColor="#DE000000"
-        tools:layout_weight="1" />
+        android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/iv_main_drawer_select_count"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center|center_horizontal"
-        android:layout_weight="0"
-        android:text="TextView"
-        android:textColor="#DE000000" />
+        <ImageView
+            android:id="@+id/iv_main_drawer_select_folder"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="0"
+            app:srcCompat="@drawable/ic_outline_home_24" />
+
+        <TextView
+            android:id="@+id/iv_main_drawer_select_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="0"
+            android:text="TextView"
+            android:textColor="#DE000000"
+            tools:layout_weight="1" />
+
+        <TextView
+            android:id="@+id/iv_main_drawer_select_count"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center|center_horizontal"
+            android:layout_weight="0"
+            android:text="TextView"
+            android:textColor="#DE000000" />
+
+    </LinearLayout>
+
+
 </LinearLayout>
